# GermanNewWordsPipeline-Langgraph

./: .env.example  .gitignore  README.md  inspect_codex_state.py  patch_process_requirements.py
Inputs/: Word List (DE).md
Prompt/: nw1_enrich_instructions.md  nw1_enrich_system.txt  nw1_qa_instructions.md  nw1_qa_system.txt  nw3_notebooklm_query.md
Requirement/: Requirement NW1 - German new words prompt.md  Requirement NW2 - Validate and Normalize Vocabulary Fields.md  (+2 more)
Tools/: .gitignore  .pre-commit-config.yaml  GermanNewWords.spec  Makefile.mak  README.md  pyproject.toml
Tools/docs/: README.md  requirements.md  test_preprocess.md
Tools/scripts/: README.md  build_windows_exe.ps1  debug_tags.py  final_validate.py  fix_mojibake_utf8.py  generate_requirement3_notebooklm.py  notebooklm_errors.py  nw1_qa_review.py  process_requirement1.py  process_requirement4.py  query_see_also_notebooklm.py  recover_missing_seealso.py  repair_block_structure.py  run_full_pipeline.py  validate_requirement4.py  validate_see_also_authenticity.py  validate_word_list.py
Tools/src/gnw/: __init__.py  __main__.py  ui.py
Tools/src/gnw_pipeline/: __init__.py  env.py  langgraph_app.py  llm_runtime.py  models.py  nw1_llm_enrich.py  nw1_llm_qa.py  nw1_qa.py  prompts.py  runtime_config.py  violations.py
Tools/src/mdproc/: __init__.py  __main__.py  core.py  validation_core.py
Tools/tests/: test_llm_runtime.py  test_merge.py  test_notebooklm_errors.py  test_nw1_parallel.py  test_processor.py  test_requirement4_processing.py  test_validate_word_list_script.py  test_validation_core.py
(+4 files in other folders)
