[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdproc"
version = "0.1.0"
dependencies = [
  "pydantic>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
mdproc = "mdproc.__main__:main"
gnw = "gnw.__main__:main"

[tool.black]
line-length = 100
[tool.ruff]
line-length = 100
[tool.mypy]
python_version = "3.11"
strict = true

[project.optional-dependencies]
dev = ["pytest","pytest-cov","mypy","ruff","black"]
pipeline = ["langgraph>=0.2.0"]
ai = ["pydantic-ai>=1.0.0"]
dist = ["pyinstaller>=6.0.0"]
